// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Footers|Site Footer Footer 1`] = `
<SiteFooter>
  <footer
    className="site-footer"
  >
    <FooterNav
      copyright="Alameda County © 2020 • All Rights Reserved"
    >
      <section
        className="footer-sock"
      >
        <div
          className="footer-sock-inner"
        >
          <p
            className="footer-copyright"
          >
            Alameda County © 2020 • All Rights Reserved
          </p>
          <nav
            className="footer-nav"
          >
            <LocalizedLink
              href="#"
            >
              <Link
                href="#"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Policy
                </a>
              </Link>
            </LocalizedLink>
          </nav>
        </div>
      </section>
    </FooterNav>
  </footer>
</SiteFooter>
`;

exports[`Storyshots Footers|Site Footer With Logo 1`] = `
<SiteFooter>
  <footer
    className="site-footer"
  >
    <FooterSection>
      <div
        className="footer-row "
      >
        <div
          className="footer-row__section pb-8"
        >
          <img
            alt="Alameda Logo"
            src="/images/logo_glyph.svg"
          />
        </div>
      </div>
    </FooterSection>
    <FooterNav
      copyright="Alameda County © 2020 • All Rights Reserved"
    >
      <section
        className="footer-sock"
      >
        <div
          className="footer-sock-inner"
        >
          <p
            className="footer-copyright"
          >
            Alameda County © 2020 • All Rights Reserved
          </p>
          <nav
            className="footer-nav"
          >
            <LocalizedLink
              href="#"
            >
              <Link
                href="#"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Policy
                </a>
              </Link>
            </LocalizedLink>
          </nav>
        </div>
      </section>
    </FooterNav>
  </footer>
</SiteFooter>
`;

exports[`Storyshots Footers|Site Footer With Logo And Credits 1`] = `
<SiteFooter>
  <footer
    className="site-footer"
  >
    <FooterSection>
      <div
        className="footer-row "
      >
        <div
          className="footer-row__section pb-8"
        >
          <img
            alt="Alameda Logo"
            src="/images/logo_glyph.svg"
          />
        </div>
      </div>
    </FooterSection>
    <FooterSection>
      <div
        className="footer-row "
      >
        <div
          className="footer-row__section pb-8"
        >
          <p>
            Alameda County Housing Portal is a project of the
            <br />
            <a
              href="https://www.acgov.org/cda/hcd/"
              target="_blank"
            >
              Alameda County - Housing and Community Development (HCD) Department
            </a>
          </p>
        </div>
      </div>
    </FooterSection>
    <FooterNav
      copyright="Alameda County © 2020 • All Rights Reserved"
    >
      <section
        className="footer-sock"
      >
        <div
          className="footer-sock-inner"
        >
          <p
            className="footer-copyright"
          >
            Alameda County © 2020 • All Rights Reserved
          </p>
          <nav
            className="footer-nav"
          >
            <LocalizedLink
              href="#"
            >
              <Link
                href="#"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Policy
                </a>
              </Link>
            </LocalizedLink>
          </nav>
        </div>
      </section>
    </FooterNav>
    <FooterSection
      className="bg-black"
      small={true}
    >
      <div
        className="footer-row bg-black"
      >
        <div
          className="footer-row__section py-2"
        >
          <ExygyFooter>
            <span>
              made with ❤️ by
               
              <a
                aria-label="Opens in new window"
                href="http://exygy.com"
                target="_blank"
              >
                exygy
              </a>
            </span>
          </ExygyFooter>
        </div>
      </div>
    </FooterSection>
  </footer>
</SiteFooter>
`;

exports[`Storyshots Site Footer Footer 1`] = `
<SiteFooter>
  <footer
    className="site-footer"
  >
    <FooterNav
      copyright="Alameda County © 2020 • All Rights Reserved"
    >
      <section
        className="footer-sock"
      >
        <div
          className="footer-sock-inner"
        >
          <p
            className="footer-copyright"
          >
            Alameda County © 2020 • All Rights Reserved
          </p>
          <nav
            className="footer-nav"
          >
            <LocalizedLink
              href="#"
            >
              <Link
                href="#"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Policy
                </a>
              </Link>
            </LocalizedLink>
          </nav>
        </div>
      </section>
    </FooterNav>
  </footer>
</SiteFooter>
`;

exports[`Storyshots Site Footer With Logo 1`] = `
<SiteFooter>
  <footer
    className="site-footer"
  >
    <FooterSection>
      <div
        className="footer-row "
      >
        <div
          className="footer-row__section pb-8"
        >
          <img
            alt="Alameda Logo"
            src="/images/logo_glyph.svg"
          />
        </div>
      </div>
    </FooterSection>
    <FooterNav
      copyright="Alameda County © 2020 • All Rights Reserved"
    >
      <section
        className="footer-sock"
      >
        <div
          className="footer-sock-inner"
        >
          <p
            className="footer-copyright"
          >
            Alameda County © 2020 • All Rights Reserved
          </p>
          <nav
            className="footer-nav"
          >
            <LocalizedLink
              href="#"
            >
              <Link
                href="#"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Policy
                </a>
              </Link>
            </LocalizedLink>
          </nav>
        </div>
      </section>
    </FooterNav>
  </footer>
</SiteFooter>
`;

exports[`Storyshots Site Footer With Logo And Credits 1`] = `
<SiteFooter>
  <footer
    className="site-footer"
  >
    <FooterSection>
      <div
        className="footer-row "
      >
        <div
          className="footer-row__section pb-8"
        >
          <img
            alt="Alameda Logo"
            src="/images/logo_glyph.svg"
          />
        </div>
      </div>
    </FooterSection>
    <FooterSection>
      <div
        className="footer-row "
      >
        <div
          className="footer-row__section pb-8"
        >
          <p>
            Alameda County Housing Portal is a project of the
            <br />
            <a
              href="https://www.acgov.org/cda/hcd/"
              target="_blank"
            >
              Alameda County - Housing and Community Development (HCD) Department
            </a>
          </p>
        </div>
      </div>
    </FooterSection>
    <FooterNav
      copyright="Alameda County © 2020 • All Rights Reserved"
    >
      <section
        className="footer-sock"
      >
        <div
          className="footer-sock-inner"
        >
          <p
            className="footer-copyright"
          >
            Alameda County © 2020 • All Rights Reserved
          </p>
          <nav
            className="footer-nav"
          >
            <LocalizedLink
              href="#"
            >
              <Link
                href="#"
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Policy
                </a>
              </Link>
            </LocalizedLink>
          </nav>
        </div>
      </section>
    </FooterNav>
    <FooterSection
      className="bg-black"
      small={true}
    >
      <div
        className="footer-row bg-black"
      >
        <div
          className="footer-row__section py-2"
        >
          <ExygyFooter>
            <span>
              made with ❤️ by
               
              <a
                aria-label="Opens in new window"
                href="http://exygy.com"
                target="_blank"
              >
                exygy
              </a>
            </span>
          </ExygyFooter>
        </div>
      </div>
    </FooterSection>
  </footer>
</SiteFooter>
`;
